[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "paikkala"
dynamic = ["version"]
description = "Paikkavarauskala"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    { name = "Aarni Koskela", email = "akx@iki.fi" },
]
dependencies = [
    "Django>=4.2",
]

[project.optional-dependencies]
printing = [
    "reportlab >= 3.0",
]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-django~=4.5",
]

[project.urls]
Homepage = "https://github.com/kcsry/paikkala"

[tool.hatch.version]
path = "paikkala/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/paikkala",
]

[[tool.mypy.overrides]]
module = "django.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "reportlab.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "baikal.settings"
norecursedirs = [".git", "venv*", "site-packages"]
doctest_optionflags = ["NORMALIZE_WHITESPACE", "IGNORE_EXCEPTION_DETAIL", "ALLOW_UNICODE"]
filterwarnings = ["ignore:.*default_app_config.*"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
exclude = [
    "migrations",
    "tests",
]
ignore = [
    "ANN101",
    "ANN401",
]
select = [
    "ANN",
    "C9",
    "E",
    "F",
    "W",
    "I",
]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.per-file-ignores]
"*/views.py" = [
    "ANN001",
    "ANN002",
    "ANN003",
    "ANN201",
]
"paikkala_tests/*.py" = [
    "ANN",
]
"*/migrations/*.py" = [
    "ANN",
    "E501",
]

[tool.ruff.format]
quote-style = "preserve"
