[metadata]
name = paikkala
version = attr: paikkala.__version__
description = Paikkavarauskala
author = Aarni Koskela
author_email = akx@iki.fi
url = https://github.com/kcsry/paikkala

[options]
packages = find:
python_requires = >=3.6
include_package_data = true
zip_safe = false
install_requires =
    Django>=3.0

[options.extras_require]
printing = reportlab >= 3.0

[options.packages.find]
where = .
exclude = baikal

[flake8]
exclude =
    migrations
    tests
max-line-length = 120
max-complexity = 10
ignore =
    ANN101
    W503
per-file-ignores =
    */views.py: ANN001,ANN002,ANN003,ANN201

[tool:pytest]
DJANGO_SETTINGS_MODULE = baikal.settings
norecursedirs = .git venv* site-packages
doctest_optionflags = NORMALIZE_WHITESPACE IGNORE_EXCEPTION_DETAIL ALLOW_UNICODE
filterwarnings =
    ignore:.*default_app_config.*

[isort]
profile = black
multi_line_output = 3
